2004-02-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Don't crash when the window is closed before the transformation is
	  finished, from Jan Arne Petersen.  (#134266)

2004-02-11  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-synopsis.xsl:
	* test/testdoc1/testdoc1.xml:
	- More cmdsynopsis work.

2004-02-10  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-header.xsl:
	* stylesheets/db2html-synopsis.xsl:
	- Some work on cmdsynopsis.

2004-02-10  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.5

	* po/*.po
	- distcheck stuff

2004-02-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-navbar.xsl:
	- Fixed theoretical bug which never gets triggered in navbar.next.

2004-02-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-header.xsl:
	- Speed improvements of about 0.1s on the UG.

2004-02-08  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-toc.xsl:
	- Rather smallish speed improvement.

2004-02-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	* src/yelp-window.c:
	- Don't always grab focus on the gtkhtml2 widget.  I did this as part of
	  my efforts to lay smack-down on gtkhtml2's scrolling weirdness, but it
	  isn't needed with the solution I have, and it's annoying.

	* stylesheets/db2html-html.xsl:
	* stylesheets/db2html-toc.xsl:
	- Stylistic TOC changes, and only print Contents header when there are.

	* test/testdoc1/testdoc1.xml:
	- Chunk two levels deep.

2004-02-07  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-titlepage.xsl:
	* stylesheets/l10n.xml.in:
	- Handle releaseinfo element.

2004-02-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* stylesheets/db2html-header.xsl:
	- Free the transformation context.
	- The cache extension element isn't working, but I hooked it in so I have
	  more oppurtunity to let GTK+ update itself.

	* stylesheets/db2html-navbar.xsl:
	- Speed improvement to navbar.prev.
